# reflection-cpp26

./: .gitignore  CMakeLists.txt  DETAILS.md  Makefile  README.md  other_annotations.md  presentation.md  reflection-c++26.pptx  register_annotations.cpp  register_inheritance.cpp
.github/workflows/: marp.yml
doc/: EXPLANATIONS.md  NTTP.md
example/: README.md  person.hpp
example/node/: auto_napi.cpp  napi_visitor.h  napi_visitor.hpp  reflected_person.node
example/python/: auto_pybind.cpp  pybind_visitor.h  pybind_visitor.hpp  test_reflected_person.py
example/rest/: auto_rest.cpp  rest_visitor.h  rest_visitor.hpp
example/web/: auto_emscripten.cpp  emscripten_visitor.hpp
examples/bindings/: person.h
examples/bindings/node/: auto_napi.cpp  reflected_person.node  test_reflected_person.js
examples/bindings/python/: pybind_visitor.h
examples/bindings/rest/: auto_rest.cpp
examples/bindings/web/: auto_emscripten.cpp  test_reflected_person.js
examples/docgen/: main.cpp
examples/qml/: Main.qml  main.cpp  qml_visitor.h  reflected_object.h
examples/qt/: main.cpp  widget_visitor.h
include/rosetta/: annotations.h  docgen.h  walk.h  walk.hpp
tests/: 1.hello_reflection.cpp  2.register_reflected.cpp  3.register_overloads.cpp  6.docgen.cpp  7.serialization_reflection.cpp  CMakeLists.txt
